add tests for the workflows endpoint #1
