# src/assets/openapi.yml
@@ -11,6 +11,8 @@ paths:
   /v1/settings:
     get:
       summary: List all available settings
+      tags:
+        - settings
       responses:
         '200':
           description: all available settings will be returned
@@ -25,6 +27,8 @@ paths:
           description: unauthorized access
     post:
       summary: Add or update one or more settings
+      tags:
+        - settings
       responses:
         204:
           description: the sent data is valid and was saved successfully
@@ -41,35 +45,103 @@ paths:
           application/json:
             schema:
               $ref: "#/components/schemas/SettingsParam"
-            examples:
-              app_title:
-                summary: add or update the app title setting
-                value:
-                  {
-                    "settings": {
-                      "app_title": "Megamine",
-                      "default_language": "de"
-                    }
-                  }
+
   /v1/workflows:
     get:
       summary: List all available workflow transitions
+      tags:
+        - workflows
       responses:
         '200':
           description: all available workflow transitions will be returned
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/WorkflowTransition"
-              examples:
-                simple:
-                  $ref: "#/components/examples/wtExample"
+                $ref: "#/components/schemas/WorkflowTransitions"
         '401':
           description: unauthorized access
+    patch:
+      summary: Updates the given status transitions
+      tags:
+        - workflows
+      responses:
+        '204':
+          description: update was successful
+        '401':
+          description: unauthorized access
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Workflows"
 components:
   examples:
-    wtExample:
+    settingsExample:
       value:
+        {
+          "settings": [
+            {
+              "id": 1,
+              "name": "app_title",
+              "value": "MegaMine",
+              "updated_on": "2021-01-26T17:21:45.517Z"
+            },
+            {
+              "id": 2,
+              "name": "rest_api_enabled",
+              "value": "1",
+              "updated_on": "2021-01-22T13:03:42.479Z"
+            },
+            {
+              "id": 3,
+              "name": "protocol",
+              "value": "https",
+              "updated_on": "2021-01-11T13:03:42.498Z"
+            },
+          ]
+        }
+  securitySchemes:
+    basicAuth:
+      type: http
+      scheme: basic
+  schemas:
+    SettingsParam:
+      type: object
+      properties:
+        settings:
+          description: all settings can be passed as simple key value pair inside the settings object
+          minProperties: 1
+          type: object
+          additionalProperties:
+            type: string
+      example:
+        settings:
+          app_title: Megamine
+          rest_api_enabled: "1"
+
+    Settings:
+      type: object
+      properties:
+        settings:
+          type: array
+          items:
+            $ref: "#/components/schemas/Setting"
+    Setting:
+      type: object
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        value:
+          type: string
+        updated_on:
+          type: string
+    WorkflowTransitions:
+      type: array
+      items:
+        $ref: "#/components/schemas/WorkflowTransition"
+      example:
         [
           {
             "id": 11,
@@ -94,65 +166,6 @@ components:
             "rule": null
           }
         ]
-    settingsExample:
-      value:
-        {
-          "settings": [
-            {
-              "id": 1,
-              "name": "app_title",
-              "value": "MegaMine",
-              "updated_on": "2021-01-26T17:21:45.517Z"
-            },
-            {
-              "id": 2,
-              "name": "rest_api_enabled",
-              "value": "1",
-              "updated_on": "2021-01-22T13:03:42.479Z"
-            },
-            {
-              "id": 3,
-              "name": "protocol",
-              "value": "https",
-              "updated_on": "2021-01-22T13:03:42.498Z"
-            },
-          ]
-        }
-  securitySchemes:
-    basicAuth:
-      type: http
-      scheme: basic
-  schemas:
-    SettingsParam:
-      type: object
-      properties:
-        settings:
-          description: all settings can be passed as simple key value pair inside the settings object
-          minProperties: 1
-          type: object
-          properties:
-            key:
-              type: string
-            value:
-              type: string
-    Settings:
-      type: object
-      properties:
-        settings:
-          type: array
-          items:
-            $ref: "#/components/schemas/Setting"
-    Setting:
-      type: object
-      properties:
-        id:
-          type: integer
-        name:
-          type: string
-        value:
-          type: string
-        updated_on:
-          type: string
     WorkflowTransition:
       type: object
       properties:
@@ -172,6 +185,58 @@ components:
           type: string
         rule:
           type: string
+      example:
+        id: 11,
+        tracker_id: 1
+        old_status_id: 3
+        new_status_id: 1
+        role_id: 1
+        assignee: false
+        author: false
+        field_name: null
+        rule: null
+    Workflows:
+      type: object
+      properties:
+        role_id:
+          type: array
+          items:
+            type: integer
+        tracker_id:
+          type: array
+          items:
+            type: integer
+        used_statuses_only:
+          type: integer
+        transitions:
+          type: array
+          items:
+            $ref: "#/components/schemas/TransitionEntity"
+    TransitionEntity:
+      type: object
+      properties:
+        src_status_id:
+          type: integer
+        transitions:
+          type: array
+          items:
+            type: object
+            properties:
+              target_status_id:
+                type: integer
+              types:
+                type: array
+                items:
+                  $ref: "#/components/schemas/WorkflowTransitionType"
+    WorkflowTransitionType:
+      type: object
+      properties:
+        name:
+          type: string
+          enum: [always, author, assignee]
+        active:
+          type: string
+          enum: [0, 1]
     Error:
       type: object
       properties:
